fb-testnet/ckb-testnet/fb-ckb-testnet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: fb-testnet
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
  name: ingress-fb-ckb-testnet
spec:
  rules:
  - host: testnet-rpc.forcebridge.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fb-ckb-testnet-svc
          servicePort: 8114
